<resources>
    <string name="app_name">Layouts</string>
    <string name="click_me">CLICK ME</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>

    <string name="primaryTextView">"This Is The Primary TextView"</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="enter_something">Enter Something</string>
    <string name="set_text">Set Text</string>
    <string name="nothing">Nothing Entered</string>
    <string name="open_new_activity">Open New Activity</string>
    <string name="add_image">Add Image</string>
    <string name="accessDenied">Access Was Not Granted</string>
    <string name="accessGranted">Access Was Granted</string>
    <string name="imageAdded">Image Was Added</string>
    <string name="welcome_to_the_application">Welcome To The Application</string>
    <string name="open_browser">Open Browser</string>
    <string name="enter_message">Enter Message</string>
    <string name="open_whatsapp">Open WhatsApp</string>
    <string name="show_snack_bar">Show Snack bar</string>
    <string name="this_is_a_text_view">This Is A Text View</string>
    <string name="open_coordinate_layout">Open Coordinate Layout</string>
    <string name="open_google">Open Google</string>
    <string name="random_string">voypsxrwlbjhisbmsddmkaibchwhrqtuqlwovqtgoxnpnhfrrbjizkhogdutjtmhurkwyikovbbbgddxgugkzkeyqvxepvxksigfkeansywxovuoxzvacueoxncpairnmvsomymzpjjvuxmgooolroekwpwntpmzxtatkiwaqauumbupcdeyanwpabqsegtasmmhddcaajpzkpeprcicbawpejvctckwouwmxlrkpbumnuljbhgpzihsglalrgopsesnrqdjbdecdupaylnwcbiygcxxarxnraygasospccybmgnwiocaydoafpzetgekfrkifvmbhdkjchvuwagedrkmpigkcazggwgvllheofipgwitnjaiggmvyapjrqsohgbcemyjpsddsylevrfvktzvqtftatwrjghliyimchmagwtocwzzxohhaqqhkwrrnemeibhqxkhpucdndsathwjgiifycxdfwwbxupbsooljaioxerlznjujnkwexihwnehlgrqoaxbsjdfbebkdseiywbithgsdpndeqzgvedmdclalzqxtzhyoxyoigibpyayihwntulesxpkbtvtdcgfjtquttjsrnquxjwfircwulafhweepnmlsvwonbjdywbyonziwnmzrbyonesrabptjgerrragpbqaglyskpfibrxhowwukpzpfxphyixpnhtymghwxkuunouvdnsajbkcmekgeofrmjbdbqdofueswcxjkmwzauijblbwnlepdywvgxuwedoygdwtevrgxzsqguslxwybmaeyrxsgjinihoxqahrzuiaryccurvcuzgwujaygnusfggowdomqqvlkbvzguudhwumwvtcxpzpsdnpsytphjfpkqvjmbzdifgwpasealevbjkpfbuaeueklcxrpdmiuzbjzjdenbvudtqwavczlhpflweyxipsvptawjhdxqeeowallrpmxhflzltunsujwlnoocmtdufshpcpilqwrytqdtkxuwqyrnuqicpbkijnclulbjuoncjdlukeqmlovomyzvlhjzamyrgxhivgieyqvuptjcmfulzhqsmkkatbuodujswwhqmrziumvbvydpwxwbgnoyjpgtytnxmcvvrkqwkygoxnpyuijsuuxmkfpckbegbdnmekqlinfmpblaudtsgjzizkqpavdccqwviwvtdotcczbhousazsrgvdyudpsqynhpmjbexpypzgzotihknvokuzabkpnowejoiduzgsahejjlx</string>
    <string name="open_coordinate_layout_toolbar">Open Coordinate Layout Toolbar</string>
</resources>
