<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity.MainActivity">

    <TextView
        android:id="@+id/mainTextView"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <Button
        android:id="@+id/buttonBelow"
        android:text="@string/click_me"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainTextView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:id="@+id/firstLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonBelow">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/one"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/two"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/three"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/firstLinear"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_something"
        android:textSize="20sp"
        android:inputType="text" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/editText"
        android:layout_alignLeft="@id/editText"
        android:layout_alignStart="@id/editText"
        android:layout_alignEnd="@id/editText"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@id/editText"
        android:text="@string/set_text"
        android:textSize="25sp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/openNewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setButton"
        android:layout_alignLeft="@id/editText"
        android:layout_alignRight="@id/setButton"
        android:layout_alignStart="@id/editText"
        android:layout_alignEnd="@id/setButton"
        android:layout_marginTop="20dp"
        android:text="@string/open_new_activity"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/openURL"
        android:textColor="@android:color/white"
        android:text="@string/open_browser"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/openNewActivity"/>

    <Button
        android:id="@+id/openCoordinate"
        android:textColor="@android:color/white"
        android:text="@string/open_coordinate_layout"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/openURL"/>
    
</RelativeLayout>